--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -143,5 +143,7 @@
     <string name="menu_task">Task</string>
     <string name="select_day_of_week_prompt">Select Day of Week</string>
     <string name="colorSelectSpinner">Collor select:</string>
+    <string name="menu_drive">Drive</string>
+    <string name="google_places_api_key">AIzaSyB26VYHwudJ4Jy1l4m_aLDSFlblt6-OI98</string>
 
 </resources>
